# SimpleMessenger

./: CMakeLists.txt
include/: TCP.hpp
include/detail/: AsyncPrint.hpp  ClientCommands.hpp  ClientLogic.hpp
include/logic/: Client.hpp  Interfaces.hpp
src/: TCP.cpp
src/detail/: ClientCommands.cpp  ClientLogic.cpp  LowLevelMessage.cpp
src/logic/: Client.cpp
